--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -65,6 +65,7 @@
 
 .container .flexbox .item{
 	flex-grow: 1;
+	width: 80%;
 }
 
 .container .flexbox .item img{
@@ -79,6 +80,7 @@
 
 .container .flexbox .item text{
 	font-size: 12px;
+	width: 80%;
 }
 
 /*RESPONSIVE
