--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -56,7 +56,10 @@
 }
 
 .container header{
-	bluye
+	font-size: 35px;
+	font-weight: bold;
+	font-family: Bahnschrift;
+	/* 	font-family: 'Bahnschrift';/*
 }
 
 .container .flexbox{
