--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -59,7 +59,7 @@
 	font-size: 35px;
 	font-weight: bold;
 	font-family: Bahnschrift;
-	/* 	font-family: 'Bahnschrift';/*
+	/* 	font-family: 'Bahnschrift';*/
 }
 
 .container .flexbox{
