--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -63,7 +63,7 @@
 	margin-top: 15px;
 	margin-bottom: 15px;
 }
-
+/*
 .container .flexbox{
 	display: flex;
 }
@@ -86,7 +86,7 @@
 .container .flexbox .item p{
 	font-size: 12px;
 	width: 200px;
-}
+}*/
 
 /*RESPONSIVE
 *https://www.w3schools.com/howto/howto_css_sidebar_responsive.asp
