--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -93,10 +93,10 @@
 *https://www.w3schools.com/howto/howto_css_sidebar_responsive.asp
 *
 */
-@media screen (max-width: 700px) {
+@media screen and (max-width: 700px) {
 .sidebar a{
 	float: none;
-}
+}}
 
 /*.container{
 
