--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -60,9 +60,9 @@
 	font-size: 35px;
 	font-weight: bold;
 	font-family: Bahnschrift;
-	margin-left: 5px;
+	/*margin-left: 5px;
 	margin-top: 15px;
-	margin-bottom: 15px;
+	margin-bottom: 15px;*/ 
 }
 
 .container .flexbox{
