--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -75,9 +75,9 @@
 }
 
 .container .flexbox .item img{
-	margin: 10px;
+	/*margin: 10px;
  	margin-left: auto;
-  	margin-right: auto;
+  	margin-right: auto;*/
   	width: 200px;
   	height: 200px;
   	background: black;
