--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -78,6 +78,7 @@
 	/*margin: 10px;
  	margin-left: auto;
   	margin-right: auto;*/
+  	display: block;
   	width: 200px;
   	height: 200px;
   	background: black;
