--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -60,8 +60,8 @@
 	font-size: 35px;
 	font-weight: bold;
 	font-family: Bahnschrift;
-	/*margin-left: 5px;
-	margin-top: 15px;
+	margin-left: 5px;
+	/*margin-top: 15px;
 	margin-bottom: 15px;*/ 
 }
 
@@ -77,7 +77,7 @@
 	/*margin: 10px;
  	margin-left: auto;
   	margin-right: auto;*/
-  	display: block
+  	display: block;
   	width: 200px;
   	height: 200px;
   	background: black;
