--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -74,11 +74,11 @@
 }
 
 .container .flexbox .item img{
-	/*margin: 10px;
+  	margin: 10px;
+ 	display: block;
  	margin-left: auto;
-  	margin-right: auto;*/
-  	display: block;
-  	width: 200px;
+  	margin-right: auto;
+  	/*width: 200px;*/
   	height: 200px;
   	background: black;
   	border-radius: 5px;
