--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -78,7 +78,7 @@
  	display: block;
  	margin-left: auto;
   	margin-right: auto;
-  	/*width: 200px;*/
+  	width: 200px;
   	height: 200px;
   	background: black;
   	border-radius: 5px;
