--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -86,7 +86,8 @@
 	font-size: 12px;
 	text-align: center;
 	width: 200px;
-	margin-left: 300px;
+	margin-left: auto;
+  	margin-right: auto;
 }
 
 /*RESPONSIVE
