--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -60,7 +60,7 @@
 	font-size: 35px;
 	font-weight: bold;
 	font-family: Bahnschrift;
-	margin-left: 5px;
+	/*margin-left: 5px;*/
 }
 
 .container .flexbox{
