--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -38,7 +38,7 @@
 
 .sidebar ul a{
 	display: block;
-	height: 100%
+	height: 100%;
 	width: 100%;
 	line-height: 60px;
 	font-size: 16px;
@@ -60,7 +60,7 @@
 	font-size: 35px;
 	font-weight: bold;
 	font-family: Bahnschrift;
-	/*margin-left: 5px;*/
+	margin-left: 5px;
 }
 
 .container .flexbox{
@@ -69,25 +69,22 @@
 
 .container .flexbox .item{
 	flex-grow: 1;
+	width: 200px;
 }
 
 .container .flexbox .item img{
-  	margin: 10px;
+	margin: 10px;
  	display: block;
  	margin-left: auto;
   	margin-right: auto;
-  	width: 200px;
+  	/*width: 200px;*/
   	height: 200px;
   	background: black;
   	border-radius: 5px;
 }
 
-.container .flexbox .item p{
+.container .flexbox .item text{
 	font-size: 12px;
-	text-align: center;
-	width: 200px;
-	margin-left: auto;
-  	margin-right: auto;
 }
 
 /*RESPONSIVE
