--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -39,7 +39,7 @@
 .sidebar ul a{
 	display: block;
 	height: 100%
-	width: 100%;
+	/*width: 100%;*/
 	line-height: 60px;
 	font-size: 16px;
 	color: black;
