--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -39,7 +39,7 @@
 .sidebar ul a{
 	display: block;
 	height: 100%;
-	/*width: 100%;*/
+	/*width: 100%; this breaks the links for some reason*/
 	line-height: 60px;
 	font-size: 16px;
 	color: black;
@@ -60,7 +60,7 @@
 	font-size: 35px;
 	font-weight: bold;
 	font-family: Bahnschrift;
-	/*margin-left: 5px;*/
+	margin-left: 5px;
 }
 
 .container .flexbox{
