--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -60,6 +60,7 @@
 	font-size: 35px;
 	font-weight: bold;
 	margin-left: 10px;
+	margin-top: 30px;
 }
 
 .container .flexbox{
@@ -84,7 +85,7 @@
 .container .flexbox .item p{
 	font-size: 15px;
 	text-align: center;
-	width: 250px;
+	width: 200px;
 	margin-left: auto;
   	margin-right: auto;
 }
