--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -91,8 +91,8 @@
 }
 
 .container hr{
-	border-top: 3px solid #bbb;
-	width: 90%;
+	border-top: 1px solid #b9bfbc;
+	width: 95%;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 10px;
