--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -60,8 +60,8 @@
 	font-size: 35px;
 	font-weight: bold;
 	margin-left: 10px;
-	padding-top: 25px;
-	padding-bottom: 25px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 
 }
 
@@ -74,7 +74,7 @@
 }
 
 .container .flexbox .item img{
-  	margin: 10px;
+  	margin: 0px 10px 10px 10px;
  	display: block;
  	margin-left: auto;
   	margin-right: auto;
