--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -97,8 +97,7 @@
 	width: 95%;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 15px;
-	margin-bottom: 15px;
+	margin: 20px 0px 0px 20px;
 }
 
 /*RESPONSIVE
