--- a/Malmö högskola/removelater.css
+++ b/Malmö högskola/removelater.css
@@ -90,8 +90,9 @@
   	margin-right: auto;
 }
 
-footer{
-	text-align: center;
+footer {
+	margin-left: auto;
+	margin-right: auto;
 	font-style: italic;
 	line-height: 100px;
 }
