--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -112,11 +112,13 @@ footer{
 }
 .container .main_section p{
 	flex-grow: 0.66;
+	margin-top: auto;
+	margin-bottom: auto;
 }
 
 .container .main_section img{
 	flex-grow: 0.33; 
-	height: 200px;
+	height: 300px;
 	background: black;
 	border-style: solid;
 	border: 5px;
