--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -112,8 +112,7 @@ footer{
 }
 .container .main_section p{
 	flex-grow: 0.66;
-	margin-top: auto;
-	margin-bottom: auto;
+	height: 300px;
 }
 
 .container .main_section img{
