--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -121,7 +121,7 @@ footer{
 	flex-grow: 0.33; 
 	height: 300px;
 	background: black;
-	border:10px solid red;
+	border:10px solid #267bba;
 	border-style: double;
 	
 	/*border-style: solid;
