--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -350,8 +350,8 @@ Didn't know about <nav>, <header> and such by then
     content: url(logo-1913689_1280.png);
     display: block;
     position: absolute;
-    left: 123px;
-    top: 56px;
+    left: 50%;
+    top: 50%;
     width: 200px;
     height: 200px;
 }
