--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -372,17 +372,9 @@ Didn't know about <nav>, <header> and such by then
 	display: block;
 }
 
-
-
-#homepage .container a { 
-  position:relative;
- }
-
-#homepage .container a:hover{ 
-  top: 20px; 
-  left:0;
- }
-
+.hover_img a { position:relative; }
+.hover_img a span { position:absolute; display:none; z-index:99; }
+.hover_img a:hover span { display:block; }
 
 /*
 *COLORS:
