--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -372,9 +372,17 @@ Didn't know about <nav>, <header> and such by then
 	display: block;
 }
 
-.hover_img a { position:relative; }
-.hover_img a span { position:absolute; display:none; z-index:99; }
-.hover_img a:hover span { display:block; }
+.hover_img a {
+	position:relative;
+}
+
+.hover_img a span {
+	position:absolute; display:none; z-index:399;
+}
+
+.hover_img a:hover span {
+	display:block;
+}
 
 /*
 *COLORS:
