--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -377,7 +377,9 @@ Didn't know about <nav>, <header> and such by then
 }
 
 .hover_img a span {
-	position:absolute; display:none; z-index:399;
+	position:absolute; 
+	display:none;
+	
 }
 
 .hover_img a:hover span {
