--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -59,8 +59,8 @@
 
 .container{
 	margin-left: 250px;
-	  position: relative;
-  min-height: 100vh;
+	position: relative;
+  	min-height: 100vh;
 }
 
 .container header{
@@ -114,7 +114,9 @@ footer{
 	line-height: 50px;
 	bottom: 0;
 	position: absolute;
+	margin-top: 10px;
 }
+
 footer p{
 	text-align: center;
 }
