--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -113,9 +113,8 @@ footer{
 	width: 100%;
 	line-height: 50px;
 	bottom: 0;
-	position: absolute;
+	position: relative;
 	margin-top: 10px;
-	padding-top: 10px;
 }
 
 footer p{
