--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -138,14 +138,21 @@ footer p{
 	border:10px solid #267bba;
 }
 
-/*RESPONSIVE
+/*RESPONSIVE, phone screen 
 *https://www.w3schools.com/howto/howto_css_sidebar_responsive.asp
 *
 */
 @media screen and (max-width: 700px) {
-.sidebar a{
-	float: none;
-}}
+	.sidebar {
+	top: 0;
+	width: 100%;
+	height: 100px;
+	}
+	.container {
+		
+	}
+}
+
 
 
 
