--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -144,21 +144,20 @@ footer p{
 */
 @media screen and (max-width: 700px) {
 	.sidebar {
-	top: 0;
-	width: 100%;
-	height: 100px;
+		top: 0;
+		width: 100%;
+		height: 100px;
 	}
-	p{
-		color: red;
-	}
-}
-
-@media screen and (max-width: 700px) {
 	.container {
-		margin-left: 250px;
+		margin-top: 100px;
 		min-width: 100vh;
-}}
+		height: 100%;
+	}
+	.sidebar img {
+		display: none;
+	}
 
+}
 
 
 
