--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -146,15 +146,19 @@ footer p{
 	.sidebar {
 		top: 0;
 		width: 100%;
-		height: 100px;
+		height: 400px;
 	}
 	.container {
-		margin-top: 100px;
+		margin-top: 400px;
 		min-width: 100vh;
 		height: 100%;
 	}
 	.sidebar img {
 		display: none;
+	}
+	.sidebar ul a{
+		line-height: 45px;
+		margin-top: 15px;
 	}
 
 }
