--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -151,7 +151,7 @@ footer p{
 	.container {
 		margin-top: 400px;
 		min-width: 100vh;
-		height: 100%;
+		height: auto;
 	}
 	.sidebar img {
 		display: none;
