--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -160,6 +160,11 @@ footer p{
 		line-height: 45px;
 		margin-top: 15px;
 	}
+	.container .section_flexbox, .container .main_section{{
+		align-items: center;
+	}
+}
+
 
 }
 
