--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -147,7 +147,15 @@ footer p{
 	.sidebar {
 		top: 0;
 		width: 100%;
-		height: 515px;
+		
+		/* Firefox */
+		height: -moz-calc(100% - 18px);
+		/* WebKit */
+		height: -webkit-calc(100% - 18px);
+		/* Opera */
+		height: -o-calc(100% - 18px);
+		/* Standard */
+		height: calc(100% - 18px);
 	}
 	.container {
 		margin-top: 515px;
