--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -161,7 +161,7 @@ footer p{
 		margin-top: 15px;
 	}
 	.container .section_flexbox, .container .main_section{{
-		align-items: center;
+		flex-direction: column;
 	}
 }
 
