--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -147,11 +147,13 @@ footer p{
 	.sidebar {
 		top: 0;
 		width: 100%;
-		height: 525px;
+		height: 545px;
 	}
 	.container {
-		margin-top: 525px;
+		margin-top: 545px;
 		width: 100%;
+		height: calc(100% - 545px);
+		bottom: 0;
 	}
 	.sidebar img {
 		display: none;
