--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -148,13 +148,13 @@ footer p{
 		top: 0;
 		width: 100%;
 		height: 545px;
-		position: initial;
+		position: relative;
 	}
 	.container {
 		margin-top: 545px;
 		width: 100%;
 		height: calc(100% - 545px);
-		bottom: 0;
+		/*bottom: 0;*/
 	}
 	.sidebar img {
 		display: none;
