--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -145,6 +145,7 @@ footer p{
 */
 @media screen and (max-width: 700px) {
 	.sidebar {
+		position: initial;
 		top: 0;
 		width: 100%;
 		height: 545px;
