--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -154,7 +154,8 @@ footer p{
 	.container {
 		margin-top: 545px;
 		width: 100%;
-		height: calc(100% - 545px);
+		height: 100%;
+		/*height: calc(100% - 545px);*/
 		/*bottom: 0;*/
 	}
 	.sidebar img {
