--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -82,7 +82,7 @@
 }
 
 .container .section_flexbox .item img{
-  	margin: 10px 10px 10px 10px;
+  	margin: 0px 10px 10px 10px;
  	display: block;
  	margin-left: auto;
   	margin-right: auto;
@@ -159,16 +159,31 @@ footer p{
 		margin-left: 0;
 
 	}
+
 	.sidebar img {
 		display: none;
 	}
+
 	.sidebar ul a{
 		line-height: 45px;
 		margin-top: 15px;
 	}
+
 	.container .section_flexbox, .container .main_section{
 		flex-direction: column;
 	}
+
+	.container .section_flexbox .item img{
+		margin-top: 10px;
+		width: 200px;
+		height: 200px;
+	}
+
+	.container .section_flexbox .item{
+		margin-top: 25px;
+	}
+
+
 }
 
 
