--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -174,6 +174,8 @@ footer p{
 		margin-top: 10px;
 		width: 200px;
 		height: 200px;
+		margin-left: auto;
+		margin-right: auto;
 	}
 
 	.container .section_flexbox .item {
