--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -143,7 +143,7 @@ footer p {
 		flex-direction: column;
 	}
 	.container .main_section img {
-		margin-top: 10px;
+		margin-top: 10px	
 		width: 200px;
 		height: 200px;
 		margin-left: auto;
