--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -60,6 +60,78 @@ th, td{
 	padding: 20px;
 }
 
+/*
+Navigation bar, present at every page
+Implemented during assignment 1
+Didn't know about <nav>, <header> and such by then
+*/
+
+.navbar {
+	overflow: hidden;
+	background-color: #096c3d;
+	font-family: 'Montserrat', sans-serif;
+	margin: 0;
+}
+.navbar a {
+  	float: right;
+  	font-size: 20px;
+  	color: white;
+  	text-align: center;
+  	padding: 14px 16px;
+  	text-decoration: none;
+}
+.navbar span{
+	font-size: 15px;
+}
+.dropdown {
+ 	float: left;
+ 	overflow: hidden;
+ 	margin-right: 25px;
+
+}
+.dropdown .dropbtn {
+	font-size: 20px;
+	font-weight: bold;
+	border: none;
+	outline: none;
+	color: white;
+	padding: 14px 16px;
+	background-color: inherit;
+	font-family: inherit; /* Important for vertical align on mobile phones */
+	margin: 0; /* Important for vertical align on mobile phones */
+}
+.navbar a:hover, .dropdown:hover .dropbtn {
+  	background-color: #a7ff83;
+  	color: black;
+}
+.dropdown-content {
+  	display: none;
+  	position: absolute;
+  	background-color: #096c3d;
+  	min-width: 160px;
+  	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  	z-index: 1;
+}
+.dropdown-content a {
+  float: none;
+  color: white;
+  font-size: 16px;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+.dropdown-content a:hover {
+  background-color: #a7ff83;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.navbar button {
+	padding-left: 0px;
+	
+}
+
 /*Styling for inlamning4*/
 .inlamning4 h1{
 	font-family: arial;
@@ -222,73 +294,6 @@ input{
 	text-align: center;
 }
 
-/*
-Navigation bar, present at every page
-Implemented during assignment 1
-Didn't know about <nav>, <header> and such by then
-*/
-
-.navbar {
-	overflow: hidden;
-	background-color: #096c3d;
-	font-family: 'Montserrat', sans-serif;
-	margin: 0;
-}
-.navbar a {
-  	float: right;
-  	font-size: 20px;
-  	color: white;
-  	text-align: center;
-  	padding: 14px 16px;
-  	text-decoration: none;
-}
-.navbar span{
-	font-size: 15px;
-}
-.dropdown {
- 	float: left;
- 	overflow: hidden;
- 	margin-right: 25px;
-
-}
-.dropdown .dropbtn {
-	font-size: 20px;
-	font-weight: bold;
-	border: none;
-	outline: none;
-	color: white;
-	padding: 14px 16px;
-	background-color: inherit;
-	font-family: inherit; /* Important for vertical align on mobile phones */
-	margin: 0; /* Important for vertical align on mobile phones */
-}
-.navbar a:hover, .dropdown:hover .dropbtn {
-  	background-color: #a7ff83;
-  	color: black;
-}
-.dropdown-content {
-  	display: none;
-  	position: absolute;
-  	background-color: #096c3d;
-  	min-width: 160px;
-  	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  	z-index: 1;
-}
-.dropdown-content a {
-  float: none;
-  color: white;
-  font-size: 16px;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-.dropdown-content a:hover {
-  background-color: #a7ff83;
-}
-.dropdown:hover .dropdown-content {
-  display: block;
-}
 
 /*styling for landing page*/
 #homepage {
