--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -129,7 +129,7 @@ Didn't know about <nav>, <header> and such by then
 }
 .navbar button {
 	padding-left: 0px;
-	
+	padding-right: 0px;
 }
 
 /*Styling for inlamning4*/
