--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -95,7 +95,9 @@ Didn't know about <nav>, <header> and such by then
 	border: none;
 	outline: none;
 	color: white;
-	padding: 14px 0px 16px 14px;
+	padding: 14px 0px;
+	margin-left: 16px;
+	margin-right: 16px;
 	background-color: inherit;
 	font-family: inherit; /* Important for vertical align on mobile phones */
 	margin: 0; /* Important for vertical align on mobile phones */
