--- a/Malmö högskola/Webutveckling2_Klient/i4.css
+++ b/Malmö högskola/Webutveckling2_Klient/i4.css
@@ -10,6 +10,6 @@ html{
 	font-family: 'Montserrat', sans-serif;
 }
 #container{
-	color: #f4cb84;
+	background-color: #f4cb84;
 	text-align: center;
 }
