--- a/Malmö högskola/Webutveckling2_Klient/i4.css
+++ b/Malmö högskola/Webutveckling2_Klient/i4.css
@@ -6,7 +6,7 @@ html{
   	-moz-background-size: cover;
  	-o-background-size: cover;
  	background-size: cover;
-	color: white;
+	color: black;
 	font-family: 'Montserrat', sans-serif;
 }
 #container{
