--- a/Malmö högskola/Webutveckling2_Klient/i4.css
+++ b/Malmö högskola/Webutveckling2_Klient/i4.css
@@ -1,11 +1,11 @@
 html{
- 	background: url('curtain-1275200.png'); 
+ 	/*background: url('curtain-1275200.png'); 
  	background-repeat: no-repeat;
 	background-position: right top;
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
  	-o-background-size: cover;
- 	background-size: cover;
+ 	background-size: cover;*/
 	color: black;
 	font-family: 'Montserrat', sans-serif;
 }
