--- a/Malmö högskola/Webutveckling2_Klient/i4.css
+++ b/Malmö högskola/Webutveckling2_Klient/i4.css
@@ -9,7 +9,10 @@ html{
 	color: black;
 	font-family: 'Montserrat', sans-serif;
 	background-color: #f4cb84;
-}
-#container{
 	text-align: center;
+}
+
+img{
+	width: 200px;
+	height: 200px;
 }
