--- a/Malmö högskola/Webutveckling2_Klient/i4.css
+++ b/Malmö högskola/Webutveckling2_Klient/i4.css
@@ -19,9 +19,10 @@ img{
 
 button{
 	background-color: #f38363;
-	color: white;
+	color: black;
+	font-size: 16px;
 }
 
-ul{
+li{
 	text-align: left;
 }
