--- a/Malmö högskola/Webutveckling2_Klient/i4.css
+++ b/Malmö högskola/Webutveckling2_Klient/i4.css
@@ -22,7 +22,9 @@ button{
 	color: black;
 	font-size: 16px;
 }
-
+ul{
+	display: inline-block;
+}
 li{
-	text-align: left;
+	/*text-align: left;*/
 }
