--- a/Malmö högskola/Webutveckling2_Klient/i4.css
+++ b/Malmö högskola/Webutveckling2_Klient/i4.css
@@ -12,6 +12,10 @@ html{
 	text-align: center;
 }
 
+form{
+	font-size: 14px;
+}
+
 img{
 	width: 200px;
 	height: 200px;
@@ -30,8 +34,4 @@ ul{
 }
 li{
 	text-align: left;
-}
-
-input{
-	font-size: 14px;
 }
