--- a/Malmö högskola/Webutveckling2_Klient/i4.css
+++ b/Malmö högskola/Webutveckling2_Klient/i4.css
@@ -55,4 +55,13 @@ li:focus,
 li:active {
 	transform: scale(1.1);
 }
+@media screen and (max-width: 959px) {
+	img{
+		width: 50px;
+		height: 50px;
+	}
+	form{
+		width: 75%;
+	}
+}
 /*https://www.canva.com/colors/color-palette-generator/*/
