--- a/Malmö högskola/Webutveckling2_Klient/i4.css
+++ b/Malmö högskola/Webutveckling2_Klient/i4.css
@@ -54,7 +54,7 @@ li:focus,
 li:active {
 	transform: scale(1.1);
 }
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1100px) {
 	img{
 		width: 75px;
 		height: 75px;
@@ -65,6 +65,9 @@ li:active {
 	button{
 		font-size: 50px;
 		padding: 7.5px 18px;
+	}
+	#container{
+		vertical-align: middle
 	}
 
 }
