--- a/Malmö högskola/Webutveckling2_Klient/i4.css
+++ b/Malmö högskola/Webutveckling2_Klient/i4.css
@@ -66,11 +66,10 @@ li:active {
 		font-size: 32px;
 		padding: 7.5px 18px;
 	}
-	#container{
+	img, h1 {
 		display: flex;
 		align-items: center;
 		justify-content: center;
-
 	}
 
 }
