--- a/Malmö högskola/Webutveckling2_Klient/i4.css
+++ b/Malmö högskola/Webutveckling2_Klient/i4.css
@@ -20,13 +20,15 @@ img{
 	width: 200px;
 	height: 200px;
 	display: block;
+	margin: auto;
+  	width: 50%;
 }
 
 button{
 	background-color: #f38363;
 	color: black;
 	font-size: 16px;
-	border-radius: 4px;
+	border-radius: 8px;
 	padding: 5px 12px;
 }
 
