--- a/Malmö högskola/Webutveckling2_Klient/i4.css
+++ b/Malmö högskola/Webutveckling2_Klient/i4.css
@@ -56,7 +56,7 @@ li:focus,
 li:active {
 	transform: scale(1.1);
 }
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1300px) {
 	img{
 		width: 100px;
 		height: 100px;
@@ -74,6 +74,9 @@ li:active {
 	}
 	img, h1{
 		display: inline;
+	}
+	h1{
+		vertical-align: center;
 	}
 
 }
