--- a/Malmö högskola/Webutveckling2_Klient/i4.css
+++ b/Malmö högskola/Webutveckling2_Klient/i4.css
@@ -57,10 +57,6 @@ li:active {
 	transform: scale(1.1);
 }
 
-h1{
-	line-height: 200px;
-}
-
 @media screen and (max-width: 1300px) {
 	img{
 		width: 100px;
@@ -80,9 +76,15 @@ h1{
 	img, h1{
 		display: inline;
 	}
-	h1{
-		vertical-align: center;
+	#title-container{
+    	line-height: 200px;
 	}
+
+	#title-container h1{
+
+    vertical-align: middle;
+
+}
 
 }
 /*https://www.canva.com/colors/color-palette-generator/*/
