--- a/Malmö högskola/Webutveckling2_Klient/i4.css
+++ b/Malmö högskola/Webutveckling2_Klient/i4.css
@@ -8,7 +8,8 @@ html{
  	background-size: cover;*/
 	color: black;
 	font-family: 'Montserrat', sans-serif;
-	background-color: #f4cb84;
+	/*background-color: #f4cb84;*/
+	background-color: #f38363;
 	text-align: center;
 }
 
