--- a/Malmö högskola/Webutveckling2_Klient/i4.css
+++ b/Malmö högskola/Webutveckling2_Klient/i4.css
@@ -61,13 +61,9 @@ li:active {
 	img{
 		width: 75px;
 		height: 75px;
-		display: inline;
-	}
-	form text, input{
-
-	}
-	button{
 	}
 
 }
 /*https://www.canva.com/colors/color-palette-generator/*/
+
+fa fa-search
