--- a/Malmö högskola/Webutveckling2_Klient/i4.css
+++ b/Malmö högskola/Webutveckling2_Klient/i4.css
@@ -24,7 +24,7 @@ img{
 }
 
 button{
-	background-color: #f38363;
+	background: #f38363;
 	color: black;
 	font-size: 16px;
 	border-radius: 6px;
@@ -35,7 +35,6 @@ button{
 	margin-left: -50px;
     height: 25px;
     width: 50px;
-    background: blue;
     border: 0;
     -webkit-appearance: none;
 
