--- a/Malmö högskola/Webutveckling2_Klient/i4.css
+++ b/Malmö högskola/Webutveckling2_Klient/i4.css
@@ -35,12 +35,14 @@ button{
 	margin-left: -50px;
     border: 0;
     -webkit-appearance: none;
+    height: 25px;
 
 
 }
 
 input{
 	padding-right: 50px;
+	height: 20px;
 }
 
 ul{ 
