--- a/Malmö högskola/Webutveckling2_Klient/i4.css
+++ b/Malmö högskola/Webutveckling2_Klient/i4.css
@@ -19,25 +19,31 @@ img{
 }
 
 button{
-	background: #f38363;
-	color: black;
-	border-radius: 0px 5px 5px 0px;
-	padding: 5px 12px;
-	cursor: pointer;
+ width: ;
+  padding: 10px;
+background: #f38363;  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-left: none;
+  cursor: pointer;
+  border-radius: 0px 5px 5px 0px;
+  	color: black;
+	margin-left: -0.5%;
 
-	margin-left: -50px;
-  	border: 0;
+
  	-webkit-appearance: none;
-  	height: 25px;
-	width: 50px;
-	
+
 	
 }
 
 input{
-	padding-right: 50px;
-	height: 20px;
-	width: 200px;
+	padding: 10px;
+	
+  font-size: 17px;
+  border: 1px solid grey;
+  width: 40%;
+  background: #f1f1f1;
+
 }
 
 ul{ 
