--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
@@ -14,12 +14,10 @@ html{
 img{
 	width: 200px;
 	height: 200px;
-	/*display: block;
-	margin: auto;*/
 }
 
 button{
- 	width: 3%;
+	width: 45px;
   	padding: 10px;
 	background: #f38363;  color: white;
   	font-size: 17px;
