--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
@@ -54,6 +54,7 @@ li{
     transition-duration: 0.3s;
     transition-property: transform;
     cursor: pointer;
+    list-style: disc;
 }
 
 li:hover,
